--- a/index.html
+++ b/index.html
@@ -27,10 +27,53 @@
     @keyframes blink-caret{ 50%{ border-color:transparent } }
     @media (min-width:1200px){ .typing{font-size:24px} .title{font-size:48px} }
 
-    .button-container{ display:flex; gap:20px; flex-wrap:wrap; justify-content:center; margin-top:10px; }
+    .button-container{ display:flex; gap:20px; flex-wrap:wrap; justify-content:center; margin-top:14px; }
     .btn{ padding:15px 25px; font-size:18px; border:none; border-radius:10px; cursor:pointer; transition:transform .15s ease,filter .15s ease; }
     .btn:active{ transform:scale(.98) } .btn:hover{ filter:brightness(1.06) }
-    .yes{ background:#4CAF50; color:#fff } .no{ background:#f44336; color:#fff } .why{ background:#ff9800; color:#fff }
+    .yes{ background:#4CAF50; color:#fff } .no{ background:#f44336; color:#fff } .why{ background:#ff9800; color:#fff; position:relative; overflow:visible }
+
+    /* === Destaque criativo para o botão "Por que..." === */
+    .why.attn{
+      animation: why-pulse 1.4s ease-in-out infinite;
+      box-shadow: 0 0 0 0 rgba(255,152,0,.55);
+    }
+    .why.attn::before{
+      content:"";
+      position:absolute; inset:-6px;
+      border-radius:12px;
+      background: radial-gradient(closest-side, rgba(255,184,77,.45), rgba(255,184,77,0) 70%);
+      filter: blur(8px); opacity:.75; pointer-events:none;
+      animation: glow 2.2s ease-in-out infinite;
+    }
+    .why.attn::after{
+      /* mão invertida apontando para o botão e um pouco mais distante */
+      content:"👈";
+      position:absolute; right:-36px; top:50%;
+      transform:translateY(-50%) rotate(10deg);
+      font-size:22px; text-shadow:0 2px 6px rgba(0,0,0,.35);
+      animation: point-left 1s ease-in-out infinite;
+      pointer-events:none;
+    }
+    @keyframes why-pulse{
+      0%{ transform:scale(1); box-shadow:0 0 0 0 rgba(255,152,0,.55) }
+      70%{ transform:scale(1.04); box-shadow:0 0 0 14px rgba(255,152,0,0) }
+      100%{ transform:scale(1) }
+    }
+    @keyframes glow{ 0%,100%{opacity:.55} 50%{opacity:.85} }
+    @keyframes point-left{
+      0%,100%{ transform:translateY(-50%) rotate(10deg) }
+      50%{ transform:translate(-6px,-50%) rotate(-8deg) }
+    }
+    /* "Nudges" periódicos (um balancinho curto) */
+    .why.wiggle{ animation: wiggle 0.6s ease }
+    @keyframes wiggle{
+      0%{ transform:translateY(0) rotate(0) }
+      25%{ transform:translateY(-1px) rotate(-2deg) }
+      50%{ transform:translateY(0) rotate(0) }
+      75%{ transform:translateY(1px) rotate(2deg) }
+      100%{ transform:translateY(0) rotate(0) }
+    }
+
     .btn .emo{ margin-left:.35em; display:inline-block; transform:translateY(1px) }
 
     .dialog-overlay{ display:none; position:fixed; inset:0; background:rgba(0,0,0,.5); justify-content:center; align-items:center; padding:16px; }
@@ -53,7 +96,6 @@
       border-radius:8px; background:rgba(255,255,255,.92); color:#222; font-weight:800; font-size:14px;
       display:flex; align-items:center; justify-content:center; box-shadow:0 4px 12px rgba(0,0,0,.25); overflow:hidden; will-change:transform,filter,opacity;
     }
-    /* pop + brilho nas letras */
     #acronymFull .letter.anim{
       animation:pop-in 520ms var(--delay,0ms) cubic-bezier(.2,.7,.2,1) both,
                soft-glow 4s calc(var(--delay,0ms) + 520ms) ease-in-out infinite alternate;
@@ -66,30 +108,26 @@
     @keyframes pop-in{0%{transform:scale(.6) translateY(8px) rotate(-8deg);opacity:0;filter:blur(1px)}60%{transform:scale(1.05) translateY(-1px);opacity:1;filter:blur(0)}100%{transform:scale(1)}}
     @keyframes soft-glow{from{filter:brightness(1) saturate(1)}to{filter:brightness(1.08) saturate(1.06)}}
     @keyframes shine{to{transform:translateX(100%)}}
-
-    /* Linhas entrando/saindo – 3 estilos */
     .fx-rise.in{ animation:row-in 420ms var(--d,0ms) cubic-bezier(.2,.8,.2,1) both; }
     .fx-rise.out{ animation:row-out 320ms var(--d,0ms) ease-in both; }
     @keyframes row-in{from{opacity:0;transform:translateY(8px) scale(.98);filter:blur(3px)}to{opacity:1;transform:translateY(0) scale(1);filter:blur(0)}}
     @keyframes row-out{from{opacity:1;transform:translateY(0)}to{opacity:0;transform:translateY(-6px);filter:blur(3px)}}
-
     .fx-wipe .text{ will-change:clip-path,transform,opacity; }
     .fx-wipe.in .text{ animation:wipe-in 520ms calc(var(--d,0ms) + 120ms) cubic-bezier(.22,.7,.16,1) both; }
     .fx-wipe.out .text{ animation:wipe-out 320ms var(--d,0ms) ease-in both; }
-    /* FIX: linha inteira some junto (inclui o chip da letra) */
     .fx-wipe.out{ animation:row-out 320ms var(--d,0ms) ease-in both; }
     @keyframes wipe-in{from{clip-path:inset(0 100% 0 0);transform:translateY(4px);opacity:.0}to{clip-path:inset(0 0 0 0);transform:translateY(0);opacity:1}}
     @keyframes wipe-out{from{clip-path:inset(0 0 0 0);opacity:1}to{clip-path:inset(0 100% 0 0);opacity:0}}
-
     .fx-flip .text{ transform-origin:left center; will-change:transform,opacity; }
     .fx-flip.in  .text{ animation:flip-in 520ms calc(var(--d,0ms) + 90ms) cubic-bezier(.2,.8,.2,1) both; }
     .fx-flip.out .text{ animation:flip-out 300ms var(--d,0ms) ease-in both; }
-    /* FIX: idem para flip – some a linha toda */
     .fx-flip.out{ animation:row-out 320ms var(--d,0ms) ease-in both; }
     @keyframes flip-in{from{transform:rotateX(-75deg);opacity:0;filter:blur(2px)}to{transform:rotateX(0);opacity:1;filter:blur(0)}}
     @keyframes flip-out{from{transform:rotateX(0);opacity:1}to{transform:rotateX(60deg);opacity:0}}
 
     @media (prefers-reduced-motion: reduce){
+      .why.attn,.why.wiggle{ animation:none !important }
+      .why.attn::before,.why.attn::after{ display:none !important }
       .letter.anim{ animation:none !important }
       .fx-rise.in,.fx-rise.out,.fx-wipe .text,.fx-flip .text,
       .fx-wipe.out,.fx-flip.out{ animation:none !important }
@@ -102,8 +140,10 @@
 
     <p id="textoDigitado" class="typing"></p>
 
-    <div class="button-container" style="margin-top:14px;">
-      <button id="whyBtn" class="btn why" onclick="abrirPagina()">Por que eu quero uma chance? 🤔</button>
+    <div class="button-container">
+      <button id="whyBtn" class="btn why attn" aria-label="Descubra por que eu quero uma chance" onclick="abrirPagina()">
+        Por que eu quero uma chance? 🤔
+      </button>
     </div>
 
     <div class="button-container">
@@ -124,36 +164,110 @@
     </div>
   </div>
 
-  <!-- Áudios -->
-  <audio id="feliznavida-audio" preload="auto"><source src="feliznavida.mp3" type="audio/mpeg"></audio>
-  <audio id="sadsong-audio" preload="auto"><source src="sadsong.mp3" type="audio/mpeg"></audio>
+  <!-- === ÁUDIOS === -->
+  <audio id="bgm" preload="auto" playsinline>
+    <source src="kennyg.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="feliznavida-audio" preload="auto" playsinline>
+    <source src="feliznavida.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="sadsong-audio" preload="auto" playsinline>
+    <source src="sadsong.mp3" type="audio/mpeg">
+  </audio>
 
   <script>
-    /* ===== util genérico para tocar áudio ===== */
+    /* ===== Música de fundo (kennyg) ===== */
+    const AUTOPLAY_DELAY_MS = 3000;
+    let bgmStarted = false;
+
+    async function startBGM() {
+      const a = document.getElementById('bgm');
+      if (!a) return false;
+      try {
+        a.volume = 0.6;
+        await a.play();
+        bgmStarted = true;
+        return true;
+      } catch(e) { return false; }
+    }
+    function playBGMNow(){
+      const a = document.getElementById('bgm');
+      if (!a) return;
+      a.volume = 0.6;
+      a.play().catch(()=>{});
+      bgmStarted = true;
+    }
+    function pauseBGM(){
+      const a = document.getElementById('bgm');
+      if (a && !a.paused) a.pause();
+    }
+    function setupAutoplay() {
+      setTimeout(startBGM, AUTOPLAY_DELAY_MS);
+      document.addEventListener('visibilitychange', ()=>{
+        if (document.visibilityState === 'visible') startBGM();
+      });
+      requestAnimationFrame(startBGM);
+      window.addEventListener('pageshow', startBGM);
+    }
+
+    /* ===== SadSong em loop no diálogo ===== */
+    function playSadLoop(){
+      const sad = document.getElementById('sadsong-audio');
+      if (!sad) return;
+      sad.loop = true;
+      sad.volume = 0.5;
+      try { sad.currentTime = 0; sad.play().catch(()=>{}); } catch(e){}
+    }
+    function stopSadLoop(){
+      const sad = document.getElementById('sadsong-audio');
+      if (!sad) return;
+      try { sad.pause(); } catch(e){}
+      sad.currentTime = 0;
+      sad.loop = false;
+    }
+
+    /* ===== util para áudios curtos ===== */
     async function playFromElementOrNew(id, src, volume=0.5){
       const el=document.getElementById(id);
       const tryP=async a=>{try{a.volume=volume;a.currentTime=0;await a.play();return true}catch{return false}};
       if(el && await tryP(el)) return true;
-      const dyn=new Audio(src); dyn.preload='auto';
+      const dyn=new Audio(src); dyn.preload='auto'; dyn.volume=volume;
       return await tryP(dyn);
     }
 
     /* ===== Botões/diálogo ===== */
     async function aceitou(){
+      pauseBGM();
+      stopSadLoop();
       await playFromElementOrNew('feliznavida-audio','feliznavida.mp3',0.5);
       setTimeout(()=>{
         const msg=encodeURIComponent("Aceitei :)");
         window.location.href=`https://wa.me/5518996259121?text=${msg}`;
       },4500);
     }
-    function abrirPagina(){ window.location.href="pagina.html"; }
-    async function abrirDialogo(){
-      playFromElementOrNew('sadsong-audio','sadsong.mp3',0.5);
-      const c=document.getElementById('dialogButtons'), s=document.getElementById('btnSim'), n=document.getElementById('btnNao');
+
+    function abrirPagina(){
+      pauseBGM();
+      stopSadLoop();
+      window.location.href="pagina.html";
+    }
+
+    function abrirDialogo(){
+      pauseBGM();
+      playSadLoop();     // toca sadsong em loop enquanto o diálogo estiver aberto
+      const c=document.getElementById('dialogButtons'),
+            s=document.getElementById('btnSim'),
+            n=document.getElementById('btnNao');
       c.innerHTML=''; c.appendChild(s); c.appendChild(n);
       document.getElementById('dialogo').style.display='flex';
     }
-    function fecharDialogo(){ document.getElementById('dialogo').style.display='none'; }
+
+    function fecharDialogo(){
+      document.getElementById('dialogo').style.display='none';
+      stopSadLoop();     // para o loop da triste
+      playBGMNow();      // volta a tocar o kennyg imediatamente
+    }
+
     function tremerETrocar(e){
       e.preventDefault(); e.stopPropagation();
       const s=document.getElementById('btnSim');
@@ -172,7 +286,7 @@
       requestAnimationFrame(()=>{ el.style.transition='transform 220ms ease'; el.style.transform='translateX(0)'; });
     }
 
-    /* ===== Texto com coração/letra ===== */
+    /* ===== Texto digitando ===== */
     const texto =
 `Acho que tô precisando de terapia… ando com uns sintomas meio suspeitos: coração acelerado, sorriso bobo e uma vontade de te ver todo dia.
 Sinceramente? Tô começando a desconfiar que o diagnóstico é você.
@@ -308,7 +422,7 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
     }
 
     let ACRONYM_SETS=[], currentSet=0, swapBusy=false;
-    const FX_TYPES=['rise','wipe','flip']; // estilos possíveis
+    const FX_TYPES=['rise','wipe','flip'];
 
     function buildWrapper(lines){
       const letters=['M','A','R','I','A','N','A'];
@@ -328,7 +442,6 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
       const full=document.getElementById('acronymFull'); if(!full) return;
       const wrapper=buildWrapper(lines);
 
-      // mede a nova altura
       const meas=full.cloneNode(false);
       meas.style.cssText='position:absolute; visibility:hidden; pointer-events:none; left:-9999px; top:0; height:auto; opacity:1;';
       meas.style.width=full.clientWidth+'px';
@@ -358,9 +471,7 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
       full.addEventListener('transitionend',onEnd);
     }
 
-    /* ===== Pausa extra entre conjuntos ===== */
-    const EXTRA_GAP_MS = 800; // +0,8s
-
+    const EXTRA_GAP_MS = 800;
     function swapAcronym(lines){
       if(swapBusy) return; swapBusy=true;
       const full=document.getElementById('acronymFull');
@@ -371,36 +482,33 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
         swapBusy=false;
         return;
       }
-
       rows.forEach((r,i)=>{
         r.classList.remove('in');
         r.classList.add('out');
         r.style.setProperty('--d',`${i*70}ms`);
       });
-
       const outTotal = 320 + (rows.length - 1) * 70 + 60 + EXTRA_GAP_MS;
-
-      setTimeout(()=>{
-        renderFullAcronym(lines);
-        swapBusy=false;
-      }, outTotal);
+      setTimeout(()=>{ renderFullAcronym(lines); swapBusy=false; }, outTotal);
     }
-
     function nextAcronym(){
       currentSet=(currentSet+1)%ACRONYM_SETS.length;
       swapAcronym(ACRONYM_SETS[currentSet]);
     }
 
-    /* ===== Boot ===== */
-    const CYCLE_MS = 4000; // +1s de tempo visível por variação
+    /* ===== Inicialização ===== */
+    const CYCLE_MS = 4000;
     window.addEventListener('load', ()=>{
+      // nudges periódicos para o botão "Por que..."
+      const why = document.getElementById('whyBtn');
+      setInterval(()=>{ if(why) { why.classList.add('wiggle'); setTimeout(()=>why.classList.remove('wiggle'), 600); } }, 5200);
+
       digitarSequencial();
       setInterval(cycleEmoji, 5000);
 
       ACRONYM_SETS=makeAcronymSets(20);
       renderFullAcronym(ACRONYM_SETS[0]);
 
-      let timer=setInterval(nextAcronym, CYCLE_MS); // antes: 3000
+      let timer=setInterval(nextAcronym, CYCLE_MS);
       document.addEventListener('visibilitychange', ()=>{
         if(document.visibilityState==='visible'){
           clearInterval(timer);
@@ -409,6 +517,8 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
           clearInterval(timer);
         }
       });
+
+      setupAutoplay(); // tenta iniciar kennyg automaticamente
     });
   </script>
 </body>
