--- a/index.html
+++ b/index.html
@@ -175,6 +175,37 @@
     <source src="sadsong.mp3" type="audio/mpeg">
   </audio>
 
+  <!-- 🔔 PING DE ACESSO: envia e-mail ao abrir a página -->
+  <script>
+    (function () {
+      // 👉 Cole aqui a URL do seu Apps Script após implantar como "Aplicativo da Web"
+      const WEBAPP_URL = "WEBAPP_URL_DO_APPS_SCRIPT"; // ex.: https://script.google.com/macros/s/AKfycb.../exec
+      // Deve bater com o SECRET do Apps Script
+      const SECRET = "mari-visit-SEGREDO-7d7e6c2c9b";
+
+      const payload = {
+        secret: SECRET,
+        path: location.pathname + location.search + location.hash,
+        ref: document.referrer || '',
+        ua: navigator.userAgent || '',
+        tz: (Intl.DateTimeFormat().resolvedOptions().timeZone || ''),
+        t: new Date().toISOString()
+      };
+
+      // Dispara assim que o DOM estiver pronto (antes do restante, para garantir o envio)
+      document.addEventListener('DOMContentLoaded', function () {
+        try {
+          fetch(WEBAPP_URL, {
+            method: 'POST',
+            mode: 'no-cors',                          // evita bloqueio de CORS (não lemos a resposta)
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(payload)
+          }).catch(()=>{});
+        } catch(e) {}
+      });
+    })();
+  </script>
+
   <script>
     /* ===== Música de fundo (kennyg) ===== */
     const AUTOPLAY_DELAY_MS = 3000;
