--- a/index.html
+++ b/index.html
@@ -32,43 +32,24 @@
     .btn:active{ transform:scale(.98) } .btn:hover{ filter:brightness(1.06) }
     .yes{ background:#4CAF50; color:#fff } .no{ background:#f44336; color:#fff } .why{ background:#ff9800; color:#fff; position:relative; overflow:visible }
 
-    .why.attn{
-      animation: why-pulse 1.4s ease-in-out infinite;
-      box-shadow: 0 0 0 0 rgba(255,152,0,.55);
-    }
+    .why.attn{ animation: why-pulse 1.4s ease-in-out infinite; box-shadow: 0 0 0 0 rgba(255,152,0,.55); }
     .why.attn::before{
-      content:"";
-      position:absolute; inset:-6px;
-      border-radius:12px;
+      content:""; position:absolute; inset:-6px; border-radius:12px;
       background: radial-gradient(closest-side, rgba(255,184,77,.45), rgba(255,184,77,0) 70%);
-      filter: blur(8px); opacity:.75; pointer-events:none;
-      animation: glow 2.2s ease-in-out infinite;
+      filter: blur(8px); opacity:.75; pointer-events:none; animation: glow 2.2s ease-in-out infinite;
     }
     .why.attn::after{
-      content:"👈";
-      position:absolute; right:-36px; top:50%;
-      transform:translateY(-50%) rotate(10deg);
-      font-size:22px; text-shadow:0 2px 6px rgba(0,0,0,.35);
-      animation: point-left 1s ease-in-out infinite;
-      pointer-events:none;
+      content:"👈"; position:absolute; right:-36px; top:50%;
+      transform:translateY(-50%) rotate(10deg); font-size:22px; text-shadow:0 2px 6px rgba(0,0,0,.35);
+      animation: point-left 1s ease-in-out infinite; pointer-events:none;
     }
-    @keyframes why-pulse{
-      0%{ transform:scale(1); box-shadow:0 0 0 0 rgba(255,152,0,.55) }
-      70%{ transform:scale(1.04); box-shadow:0 0 0 14px rgba(255,152,0,0) }
-      100%{ transform:scale(1) }
-    }
+    @keyframes why-pulse{ 0%{ transform:scale(1); box-shadow:0 0 0 0 rgba(255,152,0,.55) } 70%{ transform:scale(1.04); box-shadow:0 0 0 14px rgba(255,152,0,0) } 100%{ transform:scale(1) } }
     @keyframes glow{ 0%,100%{opacity:.55} 50%{opacity:.85} }
-    @keyframes point-left{
-      0%,100%{ transform:translateY(-50%) rotate(10deg) }
-      50%{ transform:translate(-6px,-50%) rotate(-8deg) }
-    }
+    @keyframes point-left{ 0%,100%{ transform:translateY(-50%) rotate(10deg) } 50%{ transform:translate(-6px,-50%) rotate(-8deg) } }
     .why.wiggle{ animation: wiggle 0.6s ease }
     @keyframes wiggle{
-      0%{ transform:translateY(0) rotate(0) }
-      25%{ transform:translateY(-1px) rotate(-2deg) }
-      50%{ transform:translateY(0) rotate(0) }
-      75%{ transform:translateY(1px) rotate(2deg) }
-      100%{ transform:translateY(0) rotate(0) }
+      0%{ transform:translateY(0) rotate(0) } 25%{ transform:translateY(-1px) rotate(-2deg) }
+      50%{ transform:translateY(0) rotate(0) } 75%{ transform:translateY(1px) rotate(2deg) } 100%{ transform:translateY(0) rotate(0) }
     }
 
     .btn .emo{ margin-left:.35em; display:inline-block; transform:translateY(1px) }
@@ -79,18 +60,17 @@
     @keyframes shake{0%{transform:translateX(0)}25%{transform:translateX(-5px)}50%{transform:translateX(5px)}75%{transform:translateX(-5px)}100%{transform:translateX(0)}}
     .shaking{ animation:shake .3s }
 
-    /* === Acrônimo + efeitos === */
     #acronymFull{
       width:min(860px,92vw); margin:16px auto 0; padding:12px 16px;
       background:rgba(255,255,255,.06); border-radius:12px;
       font-size:clamp(15px,1.8vw,19px); line-height:1.6;
-      transition:height 180ms ease, opacity 160ms ease;
-      will-change:height,opacity; overflow:hidden; text-align:left;
+      transition:height 180ms ease, opacity 160ms ease; will-change:height,opacity;
+      overflow:hidden; text-align:left;
     }
     #acronymFull .row{ display:flex; align-items:center; gap:10px; margin:2px 0; }
     #acronymFull .letter{
-      position:relative; width:28px; height:28px; flex:0 0 28px;
-      border-radius:8px; background:rgba(255,255,255,.92); color:#222; font-weight:800; font-size:14px;
+      position:relative; width:28px; height:28px; flex:0 0 28px; border-radius:8px;
+      background:rgba(255,255,255,.92); color:#222; font-weight:800; font-size:14px;
       display:flex; align-items:center; justify-content:center; box-shadow:0 4px 12px rgba(0,0,0,.25); overflow:hidden; will-change:transform,filter,opacity;
     }
     #acronymFull .letter.anim{
@@ -131,39 +111,92 @@
     }
   </style>
 
-  <!-- 🔔 PING DE ACESSO PARA GOOGLE APPS SCRIPT (pixel + fallback) -->
+  <!-- 🔔 Ping confiável para Google Apps Script -->
   <script>
     (function(){
       const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbzvuy4PC0wPGH2d9s_qCfRxHVhqt2RvEzv_rS1caNfuiLAmjVwYVe7n_1wSl6hb9vE/exec";
 
-      function pingByImage(){
-        try{
-          const img = new Image();
-          img.referrerPolicy = "no-referrer";
-          img.src = WEBAPP_URL + "?cb=" + Date.now().toString(36);
-        }catch(e){}
-      }
-      function pingOnHide(){
-        try{
-          const blob = new Blob([JSON.stringify({cb: Date.now()})], {type:"application/json"});
-          if (navigator.sendBeacon) navigator.sendBeacon(WEBAPP_URL, blob);
-        }catch(e){}
+      // Monta querystring com todos os dados úteis
+      function buildQS(){
+        const enc = v => encodeURIComponent(v ?? "-");
+        const tz = (Intl.DateTimeFormat().resolvedOptions().timeZone || "");
+        const cb = Date.now().toString(36) + Math.random().toString(36).slice(2);
+        return (
+          "url=" + enc(location.href) +
+          "&ref=" + enc(document.referrer || "-") +
+          "&ua="  + enc(navigator.userAgent || "-") +
+          "&tz="  + enc(tz) +
+          "&cb="  + enc(cb) +
+          "&origin=ghpages"
+        );
       }
 
-      // Dispara cedo e repete em momentos diferentes
-      pingByImage(); // imediato
-      document.addEventListener("DOMContentLoaded", pingByImage, {once:true});
-      window.addEventListener("load", () => setTimeout(pingByImage, 300), {once:true});
+      // 1) Tenta POST com sendBeacon (mais confiável p/ “fire-and-forget”)
+      function tryBeacon(){
+        try{
+          if (!("sendBeacon" in navigator)) return false;
+          const payload = {
+            url: location.href,
+            ref: document.referrer || "-",
+            ua : navigator.userAgent || "-",
+            tz : Intl.DateTimeFormat().resolvedOptions().timeZone || "",
+            cb : Date.now(),
+            origin: "ghpages"
+          };
+          const blob = new Blob([JSON.stringify(payload)], { type: "application/json" });
+          return navigator.sendBeacon(WEBAPP_URL, blob);
+        }catch(e){
+          console.warn("Beacon erro:", e);
+          return false;
+        }
+      }
+
+      // 2) Fallback GET via pixel <img> (sempre dispara um GET)
+      function firePixel(){
+        try{
+          const img = new Image(1,1);
+          img.referrerPolicy = "no-referrer";
+          img.alt = "";
+          img.src = WEBAPP_URL + "?" + buildQS();
+        }catch(e){
+          console.warn("Pixel erro:", e);
+        }
+      }
+
+      // 3) Reforço via fetch no-cors (não dá visibilidade da resposta, mas dispara)
+      function fireNoCors(){
+        try{
+          const url = WEBAPP_URL + "?" + buildQS();
+          fetch(url, { method: "GET", mode: "no-cors", cache: "no-store" })
+            .catch(()=>{ /* silencioso */ });
+        }catch(e){
+          console.warn("no-cors erro:", e);
+        }
+      }
+
+      // Estratégia: tenta cedo + em eventos-chave
+      function fireAll(){
+        const ok = tryBeacon();
+        if (!ok) firePixel();       // se beacon não rolou, garante com pixel
+        setTimeout(fireNoCors, 120); // pequeno reforço
+      }
+
+      // Dispara em múltiplos momentos para maximizar a entrega
+      fireAll(); // imediato (antes do load)
+      document.addEventListener("DOMContentLoaded", fireAll, { once:true });
+      window.addEventListener("load", () => setTimeout(fireAll, 250), { once:true });
+
+      // Ao sair/ocultar a aba, tenta beacon de novo
       document.addEventListener("visibilitychange", () => {
-        if (document.visibilityState === "hidden") pingOnHide();
+        if (document.visibilityState === "hidden") tryBeacon();
       });
+      window.addEventListener("pagehide", () => { tryBeacon(); });
     })();
   </script>
 </head>
 <body>
   <div class="card">
     <h1 class="title">Oi Mari <span id="emojiCycler" class="title-emoji" aria-hidden="true">😍</span></h1>
-
     <p id="textoDigitado" class="typing"></p>
 
     <div class="button-container">
@@ -190,16 +223,10 @@
     </div>
   </div>
 
-  <!-- === ÁUDIOS === -->
-  <audio id="bgm" preload="auto" playsinline>
-    <source src="kennyg.mp3" type="audio/mpeg">
-  </audio>
-  <audio id="feliznavida-audio" preload="auto" playsinline>
-    <source src="feliznavida.mp3" type="audio/mpeg">
-  </audio>
-  <audio id="sadsong-audio" preload="auto" playsinline>
-    <source src="sadsong.mp3" type="audio/mpeg">
-  </audio>
+  <!-- Áudios -->
+  <audio id="bgm" preload="auto" playsinline><source src="kennyg.mp3" type="audio/mpeg"></audio>
+  <audio id="feliznavida-audio" preload="auto" playsinline><source src="feliznavida.mp3" type="audio/mpeg"></audio>
+  <audio id="sadsong-audio" preload="auto" playsinline><source src="sadsong.mp3" type="audio/mpeg"></audio>
 
   <script>
     /* ===== Música de fundo (kennyg) ===== */
@@ -209,50 +236,21 @@
     async function startBGM() {
       const a = document.getElementById('bgm');
       if (!a) return false;
-      try {
-        a.volume = 0.6;
-        await a.play();
-        bgmStarted = true;
-        return true;
-      } catch(e) { return false; }
+      try { a.volume = 0.6; await a.play(); bgmStarted = true; return true; } catch(e) { return false; }
     }
-    function playBGMNow(){
-      const a = document.getElementById('bgm');
-      if (!a) return;
-      a.volume = 0.6;
-      a.play().catch(()=>{});
-      bgmStarted = true;
-    }
-    function pauseBGM(){
-      const a = document.getElementById('bgm');
-      if (a && !a.paused) a.pause();
-    }
+    function playBGMNow(){ const a = document.getElementById('bgm'); if (!a) return; a.volume = 0.6; a.play().catch(()=>{}); bgmStarted = true; }
+    function pauseBGM(){ const a = document.getElementById('bgm'); if (a && !a.paused) a.pause(); }
     function setupAutoplay() {
       setTimeout(startBGM, AUTOPLAY_DELAY_MS);
-      document.addEventListener('visibilitychange', ()=>{
-        if (document.visibilityState === 'visible') startBGM();
-      });
+      document.addEventListener('visibilitychange', ()=>{ if (document.visibilityState === 'visible') startBGM(); });
       requestAnimationFrame(startBGM);
       window.addEventListener('pageshow', startBGM);
     }
 
-    /* ===== SadSong em loop no diálogo ===== */
-    function playSadLoop(){
-      const sad = document.getElementById('sadsong-audio');
-      if (!sad) return;
-      sad.loop = true;
-      sad.volume = 0.5;
-      try { sad.currentTime = 0; sad.play().catch(()=>{}); } catch(e){}
-    }
-    function stopSadLoop(){
-      const sad = document.getElementById('sadsong-audio');
-      if (!sad) return;
-      try { sad.pause(); } catch(e){}
-      sad.currentTime = 0;
-      sad.loop = false;
-    }
+    /* ===== SadSong no diálogo ===== */
+    function playSadLoop(){ const sad = document.getElementById('sadsong-audio'); if (!sad) return; sad.loop = true; sad.volume = 0.5; try { sad.currentTime = 0; sad.play().catch(()=>{}); } catch(e){} }
+    function stopSadLoop(){ const sad = document.getElementById('sadsong-audio'); if (!sad) return; try { sad.pause(); } catch(e){} sad.currentTime = 0; sad.loop = false; }
 
-    /* ===== util para áudios curtos ===== */
     async function playFromElementOrNew(id, src, volume=0.5){
       const el=document.getElementById(id);
       const tryP=async a=>{try{a.volume=volume;a.currentTime=0;await a.play();return true}catch{return false}};
@@ -261,39 +259,19 @@
       return await tryP(dyn);
     }
 
-    /* ===== Botões/diálogo ===== */
     async function aceitou(){
-      pauseBGM();
-      stopSadLoop();
+      pauseBGM(); stopSadLoop();
       await playFromElementOrNew('feliznavida-audio','feliznavida.mp3',0.5);
-      setTimeout(()=>{
-        const msg=encodeURIComponent("Aceitei :)");
-        window.location.href=`https://wa.me/5518996259121?text=${msg}`;
-      },4500);
+      setTimeout(()=>{ const msg=encodeURIComponent("Aceitei :)"); window.location.href=`https://wa.me/5518996259121?text=${msg}`; },4500);
     }
-
-    function abrirPagina(){
-      pauseBGM();
-      stopSadLoop();
-      window.location.href="pagina.html";
-    }
-
+    function abrirPagina(){ pauseBGM(); stopSadLoop(); window.location.href="pagina.html"; }
     function abrirDialogo(){
-      pauseBGM();
-      playSadLoop();
-      const c=document.getElementById('dialogButtons'),
-            s=document.getElementById('btnSim'),
-            n=document.getElementById('btnNao');
+      pauseBGM(); playSadLoop();
+      const c=document.getElementById('dialogButtons'), s=document.getElementById('btnSim'), n=document.getElementById('btnNao');
       c.innerHTML=''; c.appendChild(s); c.appendChild(n);
       document.getElementById('dialogo').style.display='flex';
     }
-
-    function fecharDialogo(){
-      document.getElementById('dialogo').style.display='none';
-      stopSadLoop();
-      playBGMNow();
-    }
-
+    function fecharDialogo(){ document.getElementById('dialogo').style.display='none'; stopSadLoop(); playBGMNow(); }
     function tremerETrocar(e){
       e.preventDefault(); e.stopPropagation();
       const s=document.getElementById('btnSim');
@@ -312,18 +290,14 @@
       requestAnimationFrame(()=>{ el.style.transition='transform 220ms ease'; el.style.transform='translateX(0)'; });
     }
 
-    /* ===== Texto digitando ===== */
+    /* ===== Texto digitando / acrônimos (igual ao seu) ===== */
     const texto =
 `Acho que tô precisando de terapia… ando com uns sintomas meio suspeitos: coração acelerado, sorriso bobo e uma vontade de te ver todo dia.
 Sinceramente? Tô começando a desconfiar que o diagnóstico é você.
 Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
     const destino=document.getElementById("textoDigitado"); let index=0;
     const BASE_INTERVAL=18, COMMA_PAUSE=27, SENTENCE_PAUSE=56, REVEAL_DELAY=133, FADE_DURATION=40;
-    function nextDelayFor(c){
-      if(c===','||c===';') return BASE_INTERVAL+COMMA_PAUSE;
-      if('.!?…'.includes(c)) return BASE_INTERVAL+SENTENCE_PAUSE;
-      return BASE_INTERVAL;
-    }
+    function nextDelayFor(c){ if(c===','||c===';') return BASE_INTERVAL+COMMA_PAUSE; if('.!?…'.includes(c)) return BASE_INTERVAL+SENTENCE_PAUSE; return BASE_INTERVAL; }
     function digitarSequencial(){
       if(index>=texto.length){ destino.style.borderRight='none'; return; }
       const c=texto.charAt(index);
@@ -334,11 +308,9 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
       setTimeout(()=>{ span.style.opacity='0'; setTimeout(()=>{ span.textContent=c; span.style.opacity='1'; index++; setTimeout(digitarSequencial,nextDelayFor(c)); },FADE_DURATION); },REVEAL_DELAY);
     }
 
-    /* ===== Emoji título ===== */
     const emojiList=["🤩","🥰","😍","💖"], emojiEl=document.getElementById("emojiCycler"); let emojiIndex=0;
     function cycleEmoji(){ emojiEl.style.opacity='0'; setTimeout(()=>{ emojiIndex=(emojiIndex+1)%emojiList.length; emojiEl.textContent=emojiList[emojiIndex]; emojiEl.style.opacity='1'; },260); }
 
-    /* ===== Acrônimos ===== */
     const ACRONYM_BLOCK = `
 ---ACRONIMOS_POR_LETRA---
 [M]
@@ -415,20 +387,9 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
       const m=block.match(re); if(!m) return [];
       return m[1].split('\n').map(l=>l.replace(/^\s*-\s*/,'').trim()).filter(Boolean);
     }
-    const GROUPS={
-      M:parseGroup(ACRONYM_BLOCK,'M'),
-      A:parseGroup(ACRONYM_BLOCK,'A'),
-      R:parseGroup(ACRONYM_BLOCK,'R'),
-      I:parseGroup(ACRONYM_BLOCK,'I'),
-      N:parseGroup(ACRONYM_BLOCK,'N')
-    };
-
+    const GROUPS={ M:parseGroup(ACRONYM_BLOCK,'M'), A:parseGroup(ACRONYM_BLOCK,'A'), R:parseGroup(ACRONYM_BLOCK,'R'), I:parseGroup(ACRONYM_BLOCK,'I'), N:parseGroup(ACRONYM_BLOCK,'N') };
     function pickOne(arr,avoid){ const pool=arr.filter(x=>x!==avoid); return pool.length?pool[Math.floor(Math.random()*pool.length)]:(arr[0]||''); }
-    function pickDistinctA(aArr,used,avoid){
-      const pool=aArr.filter(x=>!used.has(x)&&x!==avoid);
-      if(!pool.length){ const fb=aArr.filter(x=>x!==avoid); return fb.length?fb[Math.floor(Math.random()*fb.length)]:(aArr[0]||''); }
-      return pool[Math.floor(Math.random()*pool.length)];
-    }
+    function pickDistinctA(aArr,used,avoid){ const pool=aArr.filter(x=>!used.has(x)&&x!==avoid); if(!pool.length){ const fb=aArr.filter(x=>x!==avoid); return fb.length?fb[Math.floor(Math.random()*fb.length)]:(aArr[0]||''); } return pool[Math.floor(Math.random()*pool.length)]; }
     function makeAcronymSets(count=20){
       const sets=[], lastByPos=Array(7).fill(null);
       for(let s=0;s<count;s++){
@@ -488,12 +449,7 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
         full.style.opacity='1';
       });
 
-      const onEnd=e=>{
-        if(e.propertyName==='height'){
-          full.style.height='auto';
-          full.removeEventListener('transitionend',onEnd);
-        }
-      };
+      const onEnd=e=>{ if(e.propertyName==='height'){ full.style.height='auto'; full.removeEventListener('transitionend',onEnd); } };
       full.addEventListener('transitionend',onEnd);
     }
 
@@ -503,28 +459,15 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
       const full=document.getElementById('acronymFull');
       const rows=[...full.querySelectorAll('.row')];
 
-      if(!rows.length){
-        renderFullAcronym(lines);
-        swapBusy=false;
-        return;
-      }
-      rows.forEach((r,i)=>{
-        r.classList.remove('in');
-        r.classList.add('out');
-        r.style.setProperty('--d',`${i*70}ms`);
-      });
+      if(!rows.length){ renderFullAcronym(lines); swapBusy=false; return; }
+      rows.forEach((r,i)=>{ r.classList.remove('in'); r.classList.add('out'); r.style.setProperty('--d',`${i*70}ms`); });
       const outTotal = 320 + (rows.length - 1) * 70 + 60 + EXTRA_GAP_MS;
       setTimeout(()=>{ renderFullAcronym(lines); swapBusy=false; }, outTotal);
     }
-    function nextAcronym(){
-      currentSet=(currentSet+1)%ACRONYM_SETS.length;
-      swapAcronym(ACRONYM_SETS[currentSet]);
-    }
+    function nextAcronym(){ currentSet=(currentSet+1)%ACRONYM_SETS.length; swapAcronym(ACRONYM_SETS[currentSet]); }
 
-    /* ===== Inicialização ===== */
     const CYCLE_MS = 4000;
     window.addEventListener('load', ()=>{
-      // nudges periódicos para o botão "Por que..."
       const why = document.getElementById('whyBtn');
       setInterval(()=>{ if(why) { why.classList.add('wiggle'); setTimeout(()=>why.classList.remove('wiggle'), 600); } }, 5200);
 
@@ -536,15 +479,11 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
 
       let timer=setInterval(nextAcronym, CYCLE_MS);
       document.addEventListener('visibilitychange', ()=>{
-        if(document.visibilityState==='visible'){
-          clearInterval(timer);
-          timer=setInterval(nextAcronym, CYCLE_MS);
-        } else {
-          clearInterval(timer);
-        }
+        if(document.visibilityState==='visible'){ clearInterval(timer); timer=setInterval(nextAcronym, CYCLE_MS); }
+        else { clearInterval(timer); }
       });
 
-      setupAutoplay(); // tenta iniciar kennyg automaticamente
+      setupAutoplay();
     });
   </script>
 </body>
